# pybullet-planning

./: .gitignore  .gitmodules  LICENSE  README.md  create_ir_database.py  kuka_primitives.py  pr2_never_collisions.py  pr2_primitives.py  pr2_problems.py  pr2_simple.urdf  pr2_utils.py  problems.py  pybullet_utils.py  requirements.txt  robot.urdf  setup_ikfast.sh  streams.py  teleop_pr2.py  teleop_python.py  test.py  test_kuka.py  test_kuka_pick.py  test_kuka_ss.py  test_motion.py  test_pr2_motion.py  test_pr2_ss.py  test_ss.py  test_water.py  urdfEditor.py  utils.py
databases/: side_left_ir.pickle  side_right_ir.pickle  top_left_ir.pickle  top_left_ir_100.pickle  top_left_ir_500.pickle  top_right_ir_500.picle
debug/: test_clone.py  test_visibility.py  test_water.py
debug_examples/: teleop_pr2.py  test_clone.py  test_eth_rfl_motion.py  test_eth_rfl_pick.py  test_irb6600_track_pick.py  test_json.py  test_kuka_kr6r900_pick.py  test_kuka_pick.py  test_models.py  test_movo.py  test_pr2_motion.py  test_tamp_xml.py  test_visibility.py  test_water.py  test_xml.py
examples/: teleop_pr2.py  test_clone.py  test_collision.py  test_door.py  test_franka.py  test_json.py  test_kinbody.py  test_kiva.py  test_kuka_pick.py  test_models.py  test_movo.py  test_pr2_motion.py  test_ramp.py  test_se3.py  test_tamp_xml.py  test_tracik.py  test_turtlebot.py  test_turtlebot_motion.py  test_visibility.py  test_water.py
examples/gripper/: test_side.py  test_top.py
experimental/: pr2_self_collision.py  test.py  urdfEditor.py  urdfEditor2.py
models/: cup.urdf  irobot.urdf  square.urdf  voxel.urdf
models/bi_panda/: basket.urdf  bi_panda.urdf  bi_panda_plate_hand.urdf  bi_panda_shifted.urdf  bi_panda_shifted_plate.urdf  bin.urdf  coke.urdf  table.urdf  tray.urdf
models/kuka_kr6r900_description/framefab_kr6_r900_support/: .gitignore  CMakeLists.txt  package.xml
models/kuka_kr6r900_description/framefab_kr6_r900_support/config/: joint_names_kr6_r900_workspace.yaml
models/kuka_kr6r900_description/framefab_kr6_r900_support/meshes/collision/: MIT_3-412_workspace_simplified.stl
models/kuka_kr6r900_description/framefab_kr6_r900_support/urdf/: kr6_r900_mit_suction_gripper.urdf  kr6_r900_pp.urdf  kr6_r900_workspace.urdf  kuka_kr6_r900.urdf  kuka_kr6_r900.xml
models/kuka_kr6r900_description/kuka_kr6_support/: CMakeLists.txt  package.xml
models/kuka_kr6r900_description/kuka_kr6_support/config/: joint_names_kr6r700sixx.yaml
models/kuka_kr6r900_description/kuka_kr6_support/launch/: load_kr6r700sixx.launch  load_kr6r900sixx.launch  test_kr6r700sixx.launch  test_kr6r900sixx.launch
models/kuka_kr6r900_description/kuka_kr6_support/test/: roslaunch_test_kr6r700sixx.xml  roslaunch_test_kr6r900sixx.xml
models/kuka_kr6r900_description/mit_arch_suction_gripper/: CMakeLists.txt  package.xml
models/kuka_kr6r900_description/mit_arch_suction_gripper/config/: eef_mount_offset.yaml  tcp_calibration.yaml
models/kuka_kr6r900_description/mit_arch_suction_gripper/urdf/: .urdf  mit_arch_suction_gripper_macro.xacro  xacro2urdf.sh
problems/: README.md  simple.json
pybullet_tools/: bi_panda_never_collisions.py  bi_panda_problems.py  eth_rfl_utils.py  grasps.py  kuka_kr6r900_primitives.py  kuka_primitives.py  movo_constants.py  movo_utils.py  panda_primitives.py  panda_primitives_v2.py  panda_utils.py  parse_json.py  perception.py  pr2_primitives.py  pr2_problems.py  pr2_utils.py  retime.py  tracik.py  utils.py  voxels.py
ss_examples/: test_kuka.py  test_pr2.py
table_collision/: table.urdf
test_ss/: test_kuka_ss.py  test_pr2_ss.py
(+297 files in other folders)
